--- a/admin.html
+++ b/admin.html
@@ -9,8 +9,7 @@
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
 import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
 import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
-import { getDatabase, ref, push, onChildAdded, remove } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
-import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-storage.js";
+import { getDatabase, ref, onChildAdded, remove } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
 
 // Firebase Config
 const firebaseConfig = {
@@ -29,7 +28,6 @@ const app = initializeApp(firebaseConfig);
 const analytics = getAnalytics(app);
 const auth = getAuth(app);
 const db = getDatabase(app);
-const storage = getStorage(app);
 
 // Map emails to usernames
 const userNames = {
@@ -39,10 +37,8 @@ const userNames = {
 
 // DOM Elements
 const loginForm = document.getElementById("login-form");
-const announceForm = document.getElementById("announce-form");
 const statusBox = document.getElementById("status");
 const messagesContainer = document.getElementById("messages-container");
-const fileInput = document.getElementById("image-file");
 
 let currentUserName = "";
 onAuthStateChanged(auth, (user) => {
@@ -50,12 +46,10 @@ onAuthStateChanged(auth, (user) => {
     currentUserName = userNames[user.email] || user.email.split("@")[0];
     statusBox.innerText = `✅ Logged in as ${currentUserName}`;
     loginForm.style.display = "none";
-    announceForm.style.display = "block";
-    messagesContainer.style.display = "flex"; // show flex for top-center alignment
+    messagesContainer.style.display = "flex"; // show top-center
   } else {
     statusBox.innerText = "❌ Not logged in";
     loginForm.style.display = "block";
-    announceForm.style.display = "none";
     messagesContainer.style.display = "none";
   }
 });
@@ -71,32 +65,7 @@ window.login = async function() {
 // Logout
 window.logout = async function() { await signOut(auth); };
 
-// Post Announcement
-window.postAnnouncement = async function() {
-  const msg = document.getElementById("message").value;
-  const file = fileInput.files[0];
-  if (!msg.trim() && !file) return alert("⚠️ Enter a message or choose an image!");
-
-  let imageUrl = null;
-  if (file) {
-    const storageRef = sRef(storage, `announcements/${Date.now()}_${file.name}`);
-    await uploadBytes(storageRef, file);
-    imageUrl = await getDownloadURL(storageRef);
-  }
-
-  try {
-    await push(ref(db, "announcements"), {
-      message: msg,
-      image: imageUrl,
-      user: currentUserName,
-      timestamp: Date.now()
-    });
-    document.getElementById("message").value = "";
-    fileInput.value = "";
-  } catch (error) { alert("Error: " + error.message); }
-};
-
-// Load announcements
+// Load announcements with delete option
 const annRef = ref(db, "announcements");
 onChildAdded(annRef, (snapshot) => {
   const data = snapshot.val();
@@ -110,7 +79,7 @@ onChildAdded(annRef, (snapshot) => {
     ${data.image ? `<img src="${data.image}" alt="Image" class="msg-image">` : ""}
     <button class="delete-btn">Delete</button>
   `;
-  // Delete announcement
+
   card.querySelector(".delete-btn").onclick = async () => {
     try {
       await remove(ref(db, `announcements/${snapshot.key}`));
@@ -141,7 +110,7 @@ body {
   margin: 0 auto;
 }
 h2 { text-align: center; margin-top:0; }
-input, button, textarea {
+input, button {
   width: 100%;
   padding: 10px;
   margin: 6px 0;
@@ -149,15 +118,7 @@ input, button, textarea {
   border: none;
   font-size: 14px;
 }
-input, textarea { background: #444; color: #fff; }
-textarea { resize: vertical; min-height: 60px; }
-button {
-  background: #007bff;
-  color: white;
-  cursor: pointer;
-  border: none;
-  transition: 0.2s;
-}
+button { background: #007bff; color: white; cursor: pointer; transition: 0.2s; }
 button:hover { background: #0056b3; }
 #status { text-align:center; font-weight:bold; margin-bottom:10px; }
 
@@ -210,13 +171,7 @@ button:hover { background: #0056b3; }
     <input id="email" type="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">Login</button>
-  </div>
-
-  <div id="announce-form" style="display:none;">
-    <textarea id="message" placeholder="Write your announcement..."></textarea>
-    <input type="file" id="image-file" accept="image/*">
-    <button onclick="postAnnouncement()">Send Announcement</button>
-    <button onclick="logout()" style="background:#dc3545; margin-top:5px;">Logout</button>
+    <button onclick="logout()" style="background:#dc3545;">Logout</button>
   </div>
 </div>
 
