--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/13.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/14.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/15.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
+    <img src="img/16.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
   </div>
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black mt-8 block text-center">
